[gd_scene load_steps=38 format=3 uid="uid://dihpb24rgkj4v"]

[ext_resource type="Texture2D" uid="uid://dptvvj0bbb0bt" path="res://Ghost_samurai_assests/Character/Idle/idle animation.png" id="1_xswqo"]
[ext_resource type="Script" path="res://Characters/player.gd" id="1_y2s0f"]
[ext_resource type="Texture2D" uid="uid://dlh7inrghcn0i" path="res://Ghost_samurai_assests/Attack/attack 1.png" id="2_ngp6u"]
[ext_resource type="Texture2D" uid="uid://c047m2cw5ohwq" path="res://Ghost_samurai_assests/Character/dash/dash.png" id="2_pe264"]
[ext_resource type="Texture2D" uid="uid://cdpj37tjfikf7" path="res://Ghost_samurai_assests/Character/walking/walking animation 2.png" id="3_2ucgs"]
[ext_resource type="Texture2D" uid="uid://cxdd3agln6fig" path="res://ghost arting/falling.png" id="4_thkr4"]
[ext_resource type="PackedScene" uid="uid://1cmaxt0faj10" path="res://Levels/dash.tscn" id="4_u2mg3"]
[ext_resource type="Texture2D" uid="uid://hlyhj40v0h1s" path="res://ghost arting/jumping.png" id="5_5n1um"]
[ext_resource type="Script" path="res://Characters/Sword.gd" id="7_fm8kl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvof6"]
atlas = ExtResource("2_ngp6u")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcix3"]
atlas = ExtResource("2_ngp6u")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5nm"]
atlas = ExtResource("2_ngp6u")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkufx"]
atlas = ExtResource("2_ngp6u")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymtjd"]
atlas = ExtResource("2_ngp6u")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5hco"]
atlas = ExtResource("2_pe264")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhhvk"]
atlas = ExtResource("2_pe264")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_reaks"]
atlas = ExtResource("2_pe264")
region = Rect2(80, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c717h"]
atlas = ExtResource("2_pe264")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3intn"]
atlas = ExtResource("2_pe264")
region = Rect2(160, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcqni"]
atlas = ExtResource("2_pe264")
region = Rect2(200, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfx3n"]
atlas = ExtResource("2_pe264")
region = Rect2(240, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wr5p"]
atlas = ExtResource("2_pe264")
region = Rect2(280, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vejoo"]
atlas = ExtResource("1_xswqo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t0gs"]
atlas = ExtResource("1_xswqo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c17ox"]
atlas = ExtResource("1_xswqo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdpc"]
atlas = ExtResource("1_xswqo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vbww"]
atlas = ExtResource("1_xswqo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjpbb"]
atlas = ExtResource("3_2ucgs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25jyi"]
atlas = ExtResource("3_2ucgs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiksi"]
atlas = ExtResource("3_2ucgs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt7x4"]
atlas = ExtResource("3_2ucgs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7lkw"]
atlas = ExtResource("3_2ucgs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpd2j"]
atlas = ExtResource("3_2ucgs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfxi"]
atlas = ExtResource("3_2ucgs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_im2rd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvof6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcix3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkufx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymtjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvof6")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5hco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhhvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reaks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c717h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3intn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcqni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfx3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wr5p")
}],
"loop": false,
"name": &"dash",
"speed": 30.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("4_thkr4")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vejoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t0gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c17ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhdpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vbww")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 8.0,
"texture": ExtResource("5_5n1um")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjpbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25jyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt7x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7lkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpd2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfxi")
}],
"loop": false,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j0g7f"]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w520p"]
radius = 6.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_y2s0f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_im2rd")
animation = &"fall"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_j0g7f")

[node name="dash" parent="." instance=ExtResource("4_u2mg3")]

[node name="Sword" type="Area2D" parent="."]
script = ExtResource("7_fm8kl")

[node name="sword_collision" type="CollisionShape2D" parent="Sword"]
position = Vector2(-12, 2)
shape = SubResource("CapsuleShape2D_w520p")

[node name="Sword2" type="Area2D" parent="."]
script = ExtResource("7_fm8kl")

[node name="sword_collision2" type="CollisionShape2D" parent="Sword2"]
position = Vector2(14, 2)
shape = SubResource("CapsuleShape2D_w520p")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
[connection signal="body_entered" from="Sword2" to="Sword2" method="_on_body_entered"]
